planification phase switched to displaying the actual phase card, fixed description, improved readability

--- a/front/src/app/components/cards/phase/phase-card/phase-card.component.scss
+++ b/front/src/app/components/cards/phase/phase-card/phase-card.component.scss
@@ -42,7 +42,7 @@
 	justify-content: space-between;
 	align-items: center;
 	flex: 1;
-	padding: 10px;
+	padding: 8px;
 }
 .wrapper-description{
 	z-index: 1;
@@ -66,13 +66,20 @@
 	}
 }
 .title{
-	font-size: 100%;
+	font-size: 180%;
 	font-weight: 600;
 	font-family: "Times New Roman", serif;
+	@media (max-width:1919px) {
+		font-size: 100%;
+	}
 }
 .subtitle{
 	padding-bottom: 3px;
+	font-size: 110%;
 	font-weight: 600;
+	@media (max-width:1919px) {
+		font-size: 65%;
+	}
 }
 
 app-hexed-background{
@@ -130,13 +137,11 @@ app-non-event-button{
 .wrapper-title{
 	width: 100%;
 	height: fit-content;
-	padding-top: 15px;
-	padding-bottom: 8px;
+	padding-top: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	@media (max-width:1919px) {
 		padding-top: 7px;
-		padding-bottom: 0px;
 	}
 }
