--- a/front/src/app/components/game-event-blocks/phase-planification/phase-planification.component.scss
+++ b/front/src/app/components/game-event-blocks/phase-planification/phase-planification.component.scss
@@ -1,104 +1,29 @@
-$card-width: 400px;
-$card-height: calc($card-width / 2);
-
-$colors: (
-  "construction": red,
-  "action": blue,
-  "development": green,
-  "research": yellow,
-  "production": orange,
-);
-.wrapper-main{
+:host{
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	&.phase-selected{
-		justify-content: space-between;
-	}
+	gap: 30px;
 }
 .wrapper-phase-card{
     display: flex;
     justify-content: center;
-    gap: 3%;
-    width: 100%;
     height: auto;
 }
-.phase-card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    background-color: transparent;
-    max-width: 100%;
+button{
+	background: transparent;
+	border: 0;
 }
-.phase-image{
-    max-height: 100%;
-    max-width: 100%;
+.hovered{
+	cursor: pointer;
 }
-.wrapper-button{
-	$size: 150px;
-	width: $size;
-	display: flex;
-    justify-content: center;
-    align-items: center;
-
-	aspect-ratio: 1;
-
-	$colorOutline: white;//var(--color-ares-orange);
+.previous{
+	filter: grayscale(85%);
+	pointer-events: none;
+}
+.current{
 	$colorShadow: white;
-	box-shadow: 0 0 calc($size * .1) 5px $colorShadow;
-	border-radius: calc($size * .1);
-
-	&.selected{
-		box-shadow: 0 0 50px 20px $colorShadow;
-		background-color: $colorShadow;
-		outline-offset: 20px;
-		outline: $colorOutline 1px solid;
-	}
-	@media (max-width: 1919px) {
-		$size: 100px;
-		width: $size;
-	}
-}
-.wrapper-selected-phase-card{
-    display: flex;
-    justify-content: center;
-    //margin-top: 5%;
-}
-.wrapper-phase-card-description{
-	position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: $card-height;
-    width: $card-width;
-	border: rgba(255, 255, 255, 0.75) solid 1px;
+	box-shadow: 0 0 20px 10px $colorShadow;
 	border-radius: 15px;
-}
-.wrapper-phase-selected{
-    $horizontal-padding: 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    padding-left: $horizontal-padding;
-    padding-right: $horizontal-padding;
-    height: 90%;
-    width: 100%;
-}
-app-text-with-image{
-    width: 100%;
-}
-.wrapper-title-and-text{
-    width: 90%;
-    min-height: 30%;
-}
-h4{
-	//text-align: center;
-	margin-bottom: 5px;
-	margin-left: 10px;
 }
